--- a/app/src/main/res/drawable/box_yellow_round_gradation.xml
+++ b/app/src/main/res/drawable/box_yellow_round_gradation.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:angle="180"
-        android:startColor="#FFFFFF"
-        android:endColor="@color/light_white"
-        android:type="linear" />
-    <corners
 
-        android:topLeftRadius="30dp"
-        android:topRightRadius="30dp"/>
+    <gradient android:angle="180"
+        android:endColor="#ffb606"
+        android:startColor="#f7971e"
+        android:type="linear" />
+
+    <corners
+        android:topLeftRadius="50dp"
+        android:topRightRadius="50dp"
+        android:bottomLeftRadius="50dp"
+        android:bottomRightRadius="50dp"/>
     <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
 </shape>
